# N2HE-hexl

./: CMakeLists.txt  FacialRecognition.cpp  MNIST.cpp  README.md  hexl_test.cpp
include/: include.hpp
include/LWEscheme/: LWE_64.hpp
include/PolynomialRing/: Poly_ring_64.hpp
include/RLWEscheme/: LUT_64.hpp  RLWE_64.hpp
include/RandomNumberGenerator/: rand.hpp
include/test/: testLWE.hpp  testPoly.hpp  testRLWE.hpp
